--- a/Midterm_Project.ipynb
+++ b/Midterm_Project.ipynb
@@ -2,17 +2,175 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-12-ba20e24c6b5d>, line 172)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-ba20e24c6b5d>\"\u001b[0;36m, line \u001b[0;32m172\u001b[0m\n\u001b[0;31m    for i in range(0,150):\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trial No. 1\n",
+      "**********************\n",
+      "entering year 0 with 4 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 25 with 6 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 50 with 11 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 75 with 20 dolphins, with 2 breeding.\n",
+      "**********************\n",
+      "entering year 100 with 27 dolphins, with 0 breeding.\n",
+      "At year 100, there are 27 living dolphins. There have been 43 births, in total.\n",
+      "**********************\n",
+      "entering year 125 with 49 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "at year 149, there are 92 living dolphins\n",
+      "Trial No. 2\n",
+      "**********************\n",
+      "entering year 0 with 4 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 25 with 6 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 50 with 10 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 75 with 14 dolphins, with 2 breeding.\n",
+      "**********************\n",
+      "entering year 100 with 16 dolphins, with 0 breeding.\n",
+      "At year 100, there are 16 living dolphins. There have been 65 births, in total.\n",
+      "**********************\n",
+      "entering year 125 with 20 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "at year 149, there are 24 living dolphins\n",
+      "Trial No. 3\n",
+      "**********************\n",
+      "entering year 0 with 4 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 25 with 6 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 50 with 10 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 75 with 15 dolphins, with 2 breeding.\n",
+      "**********************\n",
+      "entering year 100 with 19 dolphins, with 0 breeding.\n",
+      "At year 100, there are 19 living dolphins. There have been 87 births, in total.\n",
+      "**********************\n",
+      "entering year 125 with 34 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "at year 149, there are 58 living dolphins\n",
+      "Trial No. 4\n",
+      "**********************\n",
+      "entering year 0 with 4 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 25 with 6 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 50 with 11 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 75 with 19 dolphins, with 2 breeding.\n",
+      "**********************\n",
+      "entering year 100 with 24 dolphins, with 0 breeding.\n",
+      "At year 100, there are 24 living dolphins. There have been 122 births, in total.\n",
+      "**********************\n",
+      "entering year 125 with 40 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "at year 149, there are 66 living dolphins\n",
+      "Trial No. 5\n",
+      "**********************\n",
+      "entering year 0 with 4 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 25 with 6 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 50 with 12 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 75 with 19 dolphins, with 2 breeding.\n",
+      "**********************\n",
+      "entering year 100 with 25 dolphins, with 0 breeding.\n",
+      "At year 100, there are 25 living dolphins. There have been 157 births, in total.\n",
+      "**********************\n",
+      "entering year 125 with 42 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "at year 149, there are 72 living dolphins\n",
+      "Trial No. 6\n",
+      "**********************\n",
+      "entering year 0 with 4 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 25 with 6 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 50 with 10 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 75 with 17 dolphins, with 2 breeding.\n",
+      "**********************\n",
+      "entering year 100 with 22 dolphins, with 0 breeding.\n",
+      "At year 100, there are 22 living dolphins. There have been 187 births, in total.\n",
+      "**********************\n",
+      "entering year 125 with 39 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "at year 149, there are 76 living dolphins\n",
+      "Trial No. 7\n",
+      "**********************\n",
+      "entering year 0 with 4 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 25 with 6 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 50 with 12 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 75 with 19 dolphins, with 2 breeding.\n",
+      "**********************\n",
+      "entering year 100 with 23 dolphins, with 0 breeding.\n",
+      "At year 100, there are 23 living dolphins. There have been 222 births, in total.\n",
+      "**********************\n",
+      "entering year 125 with 35 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "at year 149, there are 59 living dolphins\n",
+      "Trial No. 8\n",
+      "**********************\n",
+      "entering year 0 with 4 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 25 with 6 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 50 with 11 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 75 with 19 dolphins, with 2 breeding.\n",
+      "**********************\n",
+      "entering year 100 with 25 dolphins, with 0 breeding.\n",
+      "At year 100, there are 25 living dolphins. There have been 253 births, in total.\n",
+      "**********************\n",
+      "entering year 125 with 41 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "at year 149, there are 63 living dolphins\n",
+      "Trial No. 9\n",
+      "**********************\n",
+      "entering year 0 with 4 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 25 with 6 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 50 with 12 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 75 with 18 dolphins, with 2 breeding.\n",
+      "**********************\n",
+      "entering year 100 with 21 dolphins, with 0 breeding.\n",
+      "At year 100, there are 21 living dolphins. There have been 285 births, in total.\n",
+      "**********************\n",
+      "entering year 125 with 31 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "at year 149, there are 49 living dolphins\n",
+      "Trial No. 10\n",
+      "**********************\n",
+      "entering year 0 with 4 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 25 with 6 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 50 with 10 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "entering year 75 with 15 dolphins, with 2 breeding.\n",
+      "**********************\n",
+      "entering year 100 with 19 dolphins, with 0 breeding.\n",
+      "At year 100, there are 19 living dolphins. There have been 307 births, in total.\n",
+      "**********************\n",
+      "entering year 125 with 34 dolphins, with 0 breeding.\n",
+      "**********************\n",
+      "at year 149, there are 62 living dolphins\n"
      ]
     }
    ],
@@ -24,7 +182,20 @@
     "import networkx\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "filename = \"/Users/labuser/comp-phys/guys_names.txt\" \n",
+    "with open(filename,\"r\") as f:\n",
+    "    x = f.read()\n",
+    "    guy_names_list = eval(x)\n",
+    "    rnd.shuffle(guy_names_list)\n",
+    "    \n",
+    "            \n",
+    "filename = \"/Users/labuser/comp-phys/gals_names.txt\"\n",
+    "with open(filename,\"r\") as f:\n",
+    "    x = f.read()\n",
+    "    girl_names_list = eval(x)\n",
+    "    rnd.shuffle(girl_names_list)\n",
     "\n",
+    "    \n",
     "def gender():\n",
     "    if rnd.randint(0,2) == 0:\n",
     "        return 'Male'\n",
@@ -48,13 +219,13 @@
     "    def got_laid(self):\n",
     "        self.since_laid = 0\n",
     "    def eligibility(self, partner):\n",
-    "        if (self.sex != partner.sex \\\n",
+    "        if (self.sex != partner.sex\\\n",
     "        and self.mother != partner.name\\\n",
     "        and self.father != partner.name\\\n",
     "        and partner.mother != self.name\\\n",
     "        and partner.father != self.name\\\n",
-    "        and self.age >= 8 and self.since_laid >= 5\\\n",
-    "        and partner.age >=8 and partner.since_laid >= 5\\\n",
+    "        and self.age >= 8 and self.since_laid >= 15\\\n",
+    "        and partner.age >=8 and partner.since_laid >= 15\\\n",
     "        and abs(self.age-partner.age) < 10\\\n",
     "        and (self.mother != partner.mother or self.father != partner.father)):\n",
     "            return True\n",
@@ -70,6 +241,11 @@
     "        print 'entering year {:g} with {:g} dolphins, with {:g} breeding.'\\\n",
     "        .format(year,len(living_dolphins),breeding)\n",
     "    breeding = 0\n",
+    "    #for i in living_dolphins:\n",
+    "        #print 'entering year {:g} with {:g} dolphins, with {:g} breeding.'\\\n",
+    "        #.format(year,len(living_dolphins),breeding)\n",
+    "        #print i.name\n",
+    "    \n",
     "    for k in living_dolphins:\n",
     "        k.aging()\n",
     "        for j in living_dolphins:\n",
@@ -87,6 +263,7 @@
     "    if i == 149:\n",
     "        print '**********************'\n",
     "        print 'at year 149, there are {:g} living dolphins'.format(len(living_dolphins))\n",
+    "    \n",
     "    year += 1\n",
     "    \n",
     "    \n",
@@ -151,37 +328,31 @@
     "    \n",
     "def make_name(sex):\n",
     "    if sex == 'Male':\n",
-    "        filename = \"/Users/labuser/comp-phys/guys_names.txt\" \n",
-    "        with open(filename,\"r\") as f:\n",
-    "            x = f.read()\n",
-    "            names_list = eval(x)\n",
-    "            rnd.shuffle(names_list)\n",
-    "            for i in range(0, 2*len(names_list)):\n",
-    "                if i >= len(names_list):\n",
-    "                    yield names_list[i]\n",
-    "                    i +=1\n",
-    "                else:\n",
-    "                    yield names_list[i-len(names_list)], names_list[i+1-len(names_list)]\n",
-    "                    i +=2\n",
+    "        for i in range(0, len(guy_names_list)):\n",
+    "            yield guy_names_list[i]\n",
+    "            i +=1\n",
     "         \n",
     "    if sex == 'Female':\n",
-    "        filename = \"/Users/labuser/comp-phys/gals_names.txt\"\n",
-    "        with open(filename,\"r\") as f:\n",
-    "            x = f.read()\n",
-    "            names_list = eval(x)\n",
-    "            rnd.shuffle(names_list)\n",
-    "            for i in range(0, 2*len(names_list)):\n",
-    "                if i >= len(names_list):\n",
-    "                    yield names_list[i]\n",
-    "                    i +=1\n",
-    "                else:\n",
-    "                    yield names_list[i-len(names_list)], names_list[i+1-len(names_list)]\n",
-    "                    i +=2\n",
+    "        for i in range(0, len(girl_names_list)):\n",
+    "            yield girl_names_list[i]\n",
+    "            i +=1\n",
     "\n",
     "                \n",
     "\n",
+    "\n",
+    "    \n",
+    "                \n",
+    "                \n",
+    "                \n",
+    "                \n",
+    "                \n",
+    "\n",
+    "mean = {}\n",
+    "std = {}\n",
     "living_dolphins = []\n",
     "dead_dolphins = []\n",
+    "dolphins_dict = {}\n",
+    "full_dict = {}\n",
     "guys_names = make_name('Male')\n",
     "girls_names = make_name('Female')\n",
     "year = 0\n",
@@ -194,27 +365,57 @@
     "                \n",
     "\n",
     "        \n",
-    "        \n",
+    "\n",
     "\n",
     "def run_trial(j):\n",
     "    print 'Trial No. {:g}'.format(j)\n",
     "    for i in range(0,150):\n",
     "        advance_year(i)\n",
-    "        if i >= 10:\n",
-    "            dolphins_list_i.append(len(living_dolphins))\n",
+    "        dolphins_dict[i, j] = len(living_dolphins)\n",
     "        if i == 70:\n",
     "            my_dolphin = living_dolphins[1]\n",
+    "    \n",
     "            \n",
     "def run_all_trials(n):\n",
-    "    for k in range (0,n):\n",
+    "    for k in range (1,n+1):\n",
     "        run_trial(k)\n",
-    "    for i in range(10,150):\n",
-    "        mean_i = np.mean(dolphins_list_i)\n",
-    "        std_i = np.std(dolphins_list_i)\n",
+    "        full_dict[k] = dolphins_dict\n",
+    "        global year\n",
+    "        year = 0\n",
+    "        global breeding\n",
+    "        breeding = 0\n",
+    "        global living_dolphins\n",
+    "        living_dolphins = [Dolphins('Billy',0,1,'Male'), Dolphins('Joey',2,3,'Male'), \\\n",
+    "                           Dolphins('Terry',4,5,'Female'), Dolphins('Patricia',6,7,'Female')]\n",
+    "    for j in range(1,n+1):\n",
+    "        for i in range(0,150):\n",
+    "            mean[j] = np.mean(dolphins_dict[i,j])\n",
+    "            std[j] = np.std(dolphins_dict[i,j])\n",
+    "    return mean, std\n",
     "    \n",
-    "            \n",
-    "#print len(living_dolphins)\n",
-    "#print len(dead_dolphins)"
+    "\n",
+    "(meany, stdy) = run_all_trials(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 58.0, 2: 52.0, 3: 92.0, 4: 98.0, 5: 74.0, 6: 83.0, 7: 72.0, 8: 58.0, 9: 84.0, 10: 52.0}\n",
+      "{1: 0.0, 2: 0.0, 3: 0.0, 4: 0.0, 5: 0.0, 6: 0.0, 7: 0.0, 8: 0.0, 9: 0.0, 10: 0.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print meany\n",
+    "print stdy"
    ]
   },
   {
@@ -224,84 +425,7 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "# still method 2, but with a new module: urllib2\n",
-    "import random\n",
-    "import urllib2 \n",
-    "import re\n",
-    "\n",
-    "def find_names():\n",
-    "    boy_names = ''\n",
-    "    girl_names = ''\n",
-    "    for i in range(1,226):\n",
-    "        url = 'http://www.prokerala.com/kids/baby-names/boy/page-{:g}.html'.format(i)\n",
-    "        infile = urllib2.urlopen(url) \n",
-    "        boy_names += infile.read()   \n",
-    "        infile.close()  \n",
-    "    for i in range(1,171):\n",
-    "        url = 'http://www.prokerala.com/kids/baby-names/girl/page-{:g}.html'.format(i)\n",
-    "        infile = urllib2.urlopen(url)\n",
-    "        girl_names += infile.read()\n",
-    "        infile.close()\n",
-    "        #print boy_names\n",
-    "    guys_names1 = re.findall('(.*nameDetails\">)(.*)(</)', boy_names)\n",
-    "    guys_names = []\n",
-    "    gals_names1 = re.findall('(.*nameDetails\">)(.*)(</)', girl_names)\n",
-    "    gals_names = []\n",
-    "    for txt in guys_names1:\n",
-    "        text = txt[1]\n",
-    "        text2 = text.strip('</span>')\n",
-    "        guys_names.append(text2)\n",
-    "    for txt in gals_names1:\n",
-    "        text = txt[1]\n",
-    "        text2 = text.strip('</span>')\n",
-    "        gals_names.append(text2)\n",
-    "    dir_path = \"/Users/labuser/comp-phys/\"\n",
-    "    filenm1 = dir_path + \"guys_names.txt\"                \n",
-    "    with open(filenm1,\"w\") as f:\n",
-    "        f.write(str(guys_names)) \n",
-    "    filenm2 = dir_path + \"gals_names.txt\"                \n",
-    "    with open(filenm2,\"w\") as f:\n",
-    "        f.write(str(gals_names)) \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "def make_name(sex):\n",
-    "    if sex == 'Male':\n",
-    "        filename = \"/Users/labuser/comp-phys/guys_names.txt\" \n",
-    "        with open(filename,\"r\") as f:\n",
-    "            x = f.read()\n",
-    "            names_list = eval(x)\n",
-    "            random.shuffle(names_list)\n",
-    "            for i in range(0, len(names_list)):\n",
-    "                yield names_list[i]\n",
-    "                i +=1\n",
-    "         \n",
-    "    if sex == 'Female':\n",
-    "        filename = \"/Users/labuser/comp-phys/gals_names.txt\"\n",
-    "        with open(filename,\"r\") as f:\n",
-    "            x = f.read()\n",
-    "            names_list = eval(x)\n",
-    "            random.shuffle(names_list)\n",
-    "            for i in range(0, len(names_list)):\n",
-    "                yield names_list[i]\n",
-    "                i +=1\n",
-    "                \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "ted = make_name('Male')\n",
-    "\n",
-    "for i in range(0,6):\n",
-    "    print ted.next()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -373,7 +497,22 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "living_dolphins = []\n",
+    "dead_dolphins = []\n",
+    "dolphins_dict = {}\n",
+    "full_dict = {}\n",
+    "guys_names = make_name('Male')\n",
+    "girls_names = make_name('Female')\n",
+    "year = 0\n",
+    "breeding = 0        \n",
+    "for i in ['Ted', 'Bobby']:\n",
+    "    living_dolphins.append(Dolphins(i,0,1,'Male'))\n",
+    "for i in ['Terry', 'Alisha']:\n",
+    "    living_dolphins.append(Dolphins(i,2,3,'Female'))\n",
+    "\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "code",
